# fedimint-clientd

./: .gitignore  .replit  CHANGELOG.md  Cargo.toml  JUSTFILE  LICENSE  README.md  curl.md  dist-manifest.json  example.env  flake.nix  justfile  justfile.local.just  mprocs-new.yaml  mprocs-wscat.yaml  mprocs.yaml  release-plz.toml  shell.nix
.cargo/: config.toml
.config/flakebox/: id
.direnv/: flake-profile-1-link
.github/workflows/: release.yml
.schema/: latest.json
clientd-stateless/: Cargo.toml
clientd-stateless/src/: cashu.rs  main.rs  state.rs
clientd-stateless/src/router/: check.rs  info.rs  keysets.rs  mod.rs  swap.rs
clientd-stateless/src/router/handlers/: info.rs  keysets.rs  mod.rs
clientd-stateless/src/router/handlers/melt/: method.rs
clientd-stateless/src/router/handlers/mint/: method.rs
clientd-stateless/src/router/melt/: method.rs  quote.rs
clientd-stateless/src/router/mint/: method.rs
docs/: cashu_compatibility.md
fedimint-clientd/: Cargo.toml
fedimint-clientd/scripts/: joinFederations.sh  migrateClients.sh
fedimint-clientd/src/: backup.rs  config.rs  error.rs  main.rs  state.rs  utils.rs
fedimint-clientd/src/router/: ws.rs
fedimint-clientd/src/router/handlers/: mod.rs
fedimint-clientd/src/router/handlers/admin/: backup.rs  config.rs  discover_version.rs  federation_ids.rs  info.rs  join.rs  list_operations.rs  mod.rs  module.rs  restore.rs
fedimint-clientd/src/router/handlers/cashu/: checkstate.rs  info.rs  mod.rs  swap.rs
fedimint-clientd/src/router/handlers/cashu/melt/: method.rs  quote.rs
fedimint-clientd/src/router/handlers/cashu/mint/: method.rs  quote.rs
fedimint-clientd/src/router/handlers/fedimint/: mod.rs
fedimint-clientd/src/router/handlers/fedimint/admin/: config.rs  discover_version.rs  join.rs  list_operations.rs  mod.rs  module.rs  restore.rs
fedimint-clientd/src/router/handlers/fedimint/ln/: await_invoice.rs  await_pay.rs  claim_external_receive.rs  claim_external_receive_tweaked.rs  invoice.rs  invoice_external_pubkey.rs  invoice_external_pubkey_tweaked.rs  list_gateways.rs  mod.rs  pay.rs
fedimint-clientd/src/router/handlers/fedimint/mint/: combine.rs  encode_notes.rs  mod.rs  reissue.rs  spend.rs  split.rs  validate.rs
fedimint-clientd/src/router/handlers/fedimint/onchain/: await_deposit.rs  withdraw.rs
fedimint-clientd/src/router/handlers/fedimint/wallet/: await_deposit.rs  mod.rs
fedimint-clientd/src/router/handlers/ln/: await_invoice.rs  claim_external_receive_tweaked.rs  invoice.rs  invoice_external_pubkey_tweaked.rs  list_gateways.rs  mod.rs  pay.rs
fedimint-clientd/src/router/handlers/mint/: combine.rs  decode_notes.rs  encode_notes.rs  mod.rs  reissue.rs  spend.rs  split.rs  validate.rs
fedimint-clientd/src/router/handlers/onchain/: await_deposit.rs  deposit_address.rs  withdraw.rs
fedimint-nwc/: Cargo.toml
fedimint-nwc/frontend/: index.html  package-lock.json  package.json  script.js  styles.css
fedimint-nwc/frontend/assets/: index.html
fedimint-nwc/src/: config.rs  main.rs  nwc.rs  server.rs  state.rs  utils.rs
fedimint-nwc/src/database/: db.rs  invoice.rs  mod.rs  payment.rs
fedimint-nwc/src/managers/: key.rs  mod.rs  payments.rs
fedimint-nwc/src/nwc/: conditions.rs  handlers.rs  mod.rs  profiles.rs  types.rs
fedimint-nwc/src/services/: mod.rs  multimint.rs  nostr.rs
gc_fs_backup/: Cargo.toml
gc_fs_backup/src/: backup_worker.rs  lib.rs
misc/git-hooks/: pre-commit
multimint/: Cargo.toml
multimint/src/: client.rs  db.rs  lib.rs  types.rs
scripts/: mprocs-nix-gateway.sh  mprocs-nix.sh  mutinynet-invoice.sh
src/: config.rs  error.rs  main.rs  state.rs  utils.rs
src/router/: mod.rs  ws.rs
src/router/handlers/: cashu.rs  fedimint.rs  mod.rs
src/router/handlers/cashu/: check.rs  info.rs  keys.rs  keysets.rs  melt.rs  mint.rs  mod.rs  swap.rs
src/router/handlers/fedimint/: mod.rs
src/types/: fedimint.rs  mod.rs
wrappers/fedimint-go/: README.md  flake.nix  go.mod  go.sum
wrappers/fedimint-go/cmd/: main.go
wrappers/fedimint-go/pkg/fedimint/: client.go  client_test.go
wrappers/fedimint-go/templates/: admin_config.gohtml  claim_external.gohtml  claim_invoice.gohtml  combine.gohtml  create-invoice.gohtml  decode.gohtml  deposit.gohtml  encode.gohtml  index.gohtml  invoice.gohtml  ln_pay.gohtml  mint.gohtml  onchain.gohtml  pub_key_invoice.gohtml  reissue.gohtml  spend.gohtml  split.gohtml  validate.gohtml  withdraw.gohtml
wrappers/fedimint-kotlin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
wrappers/fedimint-py/: AsyncFedimintClient.py  FedimintClient.py  README.md  async_example.py  example.py  requirements.txt  test.py  test_async.py
wrappers/fedimint-py/models/: common.py  lightning.py  ln.py  mint.py  onchain.py  wallet.py
wrappers/fedimint-ts/: .eslintrc.json  FedimintClient.ts  README.md  bun.lockb  example.ts  flake.nix  index.ts  package-lock.json  package.json  test.ts  tsconfig.json  types.ts
wrappers/fedimint-ts/src/: FedimintClient.ts  index.ts  types.ts
wrappers/fedimint-ts/tests/: info-example.ts  test.ts
wrappers/fedimint-ts/types/: common.ts
wrappers/fedimint_clientd_rs/: Cargo.toml  README.md
wrappers/fedimint_clientd_rs/src/: lib.rs
wrappers/fedimint_clientd_rs/src/client/: admin.rs  base.rs  http.rs  lightning.rs  mint.rs  mod.rs  onchain.rs
wrappers/fedimint_clientd_rs/src/client/admin/: mod.rs  types.rs
wrappers/fedimint_clientd_rs/src/client/lightning/: mod.rs  types.rs
wrappers/fedimint_clientd_rs/src/client/mint/: mod.rs  types.rs
wrappers/fedimint_clientd_rs/src/client/onchain/: mod.rs  types.rs
wrappers/fedimint_clientd_rs/src/client/types/: mod.rs
wrappers/fedimint_clientd_rs/src/options/: join.rs  lightning.rs  mint.rs  mod.rs
wrappers/fedimint_clientd_rs/src/types/: mod.rs  requests.rs  responses.rs  values.rs
wrappers/fedimintex/: .gitignore  README.md  example.env  justfile  mix.exs
wrappers/fedimintex/lib/: admin.ex  client.ex  fedimintex.ex  mint.ex  onchain.ex  test.ex  wallet.ex
wrappers/fedimintex/test/: fedimintex_test.exs
(+63 files in other folders)
