[package]
name = "fedimint-http"
version = "0.1.0"
edition = "2021"
description = "HTTP server for Fedimint Client, exposing REST and Websocket APIs for default modules."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.1", features = ["json", "ws"] }
axum-macros = "0.4.0"
dotenv = "0.15.0"
fedimint = "0.0.1"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
fedimint-client = "0.2.1"
fedimint-core = "0.2.1"
fedimint-wallet-client = "0.2.1"
fedimint-mint-client = "0.2.1"
fedimint-ln-client = "0.2.1"
fedimint-rocksdb = "0.2.1"
url = "2.5.0"
lazy_static = "1.4.0"
async-utility = "0.1.1"
futures = "0.3.30"
tower-http = { version = "0.5.0", features = ["cors", "auth"] }
bitcoin = "0.29.2"
itertools = "0.12.0"
lnurl-rs = { version = "0.4.0", features = ["async"], default-features = false }
reqwest = "0.11.23"
lightning-invoice = { version = "0.26.0", features = ["serde"] }
bitcoin_hashes = "0.11.0"
time = { version = "0.3.25", features = ["formatting"] }
chrono = "0.4.31"
futures-util = "0.3.30"
clap = { version = "4.4.13", features = ["derive", "env"] }
multimint = "0.1.3"
