[workspace]
members = ["multimint", "fedimint-clientd", "fedimint-nwc"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
repository = "https://github.com/fedimint/fedimint-clientd"
keywords = ["fedimint", "bitcoin", "lightning", "ecash"]
license = "MIT"
readme = "README.md"
authors = ["The Fedimint Developers"]

[workspace.dependencies]
fedimint-api-client = "0.4.2"
fedimint-client = "0.4.2"
fedimint-core = "0.4.2"
fedimint-wallet-client = "0.4.2"
fedimint-mint-client = "0.4.2"
fedimint-ln-client = "0.4.2"
fedimint-ln-common = "0.4.2"
fedimint-rocksdb = "0.4.2"
fedimint-bip39 = "0.4.2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.12.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
environment-variables = ["RUSTFLAGS=--cfg tokio_unstable"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.ci]
inherits = "dev"
incremental = false
debug = "line-tables-only"
lto = "off"
