[package]
name = "fedimint-clientd"
description = "A fedimint client daemon for server side applications to hold, use, and manage Bitcoin"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.1", features = ["json", "ws"] }
axum-macros = "0.4.0"
dotenv = "0.15.0"
fedimint = "0.0.1"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
lazy_static = "1.4.0"
async-utility = "0.2.0"
tower-http = { version = "0.5.2", features = ["cors", "auth", "trace"] }
itertools = "0.12.0"
lnurl-rs = { version = "0.5.0", features = ["async"], default-features = false }
reqwest = { version = "0.12.3", features = [
  "json",
  "rustls-tls",
], default-features = false }
bitcoin_hashes = "0.13.0"
time = { version = "0.3.25", features = ["formatting"] }
chrono = "0.4.31"
futures-util = "0.3.30"
clap = { version = "3", features = ["derive", "env"] }
# multimint = { version = "0.3.8" }
multimint = { path = "../multimint" }
hex = "0.4.3"

futures = "0.3"
metrics = { version = "0.23", default-features = false }
metrics-exporter-prometheus = { version = "0.15.3", default-features = false }
