[package]
name = "fedimint-nwc"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenv = "0.15.0"
lightning-invoice = { version = "0.31.0", features = ["serde"] }
multimint = { version = "0.3.6" }
# multimint = { path = "../multimint" }
nostr = { version = "0.31.2", features = ["nip47"] }
nostr-sdk = { version = "0.31.0", features = ["nip47"] }
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
