[package]
name = "fedimint-nwc"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.1", features = ["json"] }
axum-macros = "0.4.0"
bincode = "1.3.3"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "env"] }
dotenv = "0.15.0"
futures-util = "0.3.30"
itertools = "0.13.0"
lightning-invoice = { version = "0.26.0", features = ["serde"] }
# multimint = { version = "0.3.6" }
multimint = { path = "../multimint" }
nostr = { version = "0.31.2", features = ["nip47"] }
nostr-sdk = { version = "0.31.0", features = ["nip47"] }
redb = "2.1.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
