[package]
name = "gc_fs_backup"
version = "0.1.0"
edition = "2021"
description = "Backup a compressed tarball of a directory to Google Cloud Storage"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
flate2 = "1.0.28"
google-cloud = "0.2.1"
inotify = "0.10.2"
tar = "0.4.40"
tokio = { version = "1.37.0", features = ["full"] }
