[package]
name = "multimint"
version = "0.3.3"
edition = "2021"
description = "A library for managing fedimint clients across multiple federations"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
fedimint-client = "0.3.0"
fedimint-core = "0.3.0"
fedimint-wallet-client = "0.3.0"
fedimint-mint-client = "0.3.0"
fedimint-ln-client = "0.3.0"
fedimint-rocksdb = "0.3.0"
futures-util = "0.3.30"
rand = "0.8.5"
tracing = "0.1.40"
hex = "0.4.3"
