[package]
name = "multimint"
description = "A library for managing fedimint clients across multiple federations"
version = "0.3.5"
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
fedimint-client = { workspace = true }
anyhow = "1.0.75"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
fedimint-core = { workspace = true }
fedimint-wallet-client = { workspace = true }
fedimint-mint-client = { workspace = true }
fedimint-ln-client = { workspace = true }
fedimint-rocksdb = { workspace = true }
futures-util = "0.3.30"
rand = "0.8.5"
tracing = "0.1.40"
hex = "0.4.3"
