[package]
name = "multimint"
description = "A library for managing fedimint clients across multiple federations"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
fedimint-api-client = { workspace = true }
fedimint-client = { workspace = true }
anyhow = "1.0.75"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
fedimint-core = { workspace = true }
fedimint-wallet-client = { workspace = true }
fedimint-mint-client = { workspace = true }
fedimint-ln-client = { workspace = true }
fedimint-ln-common = { workspace = true }
fedimint-rocksdb = { workspace = true }
fedimint-bip39 = { workspace = true }
futures-util = "0.3.30"
rand = "0.8.5"
tracing = "0.1.40"
hex = "0.4.3"
bip39 = "2.1.0"
